Add secuirty hash and recipient boxes as types rather  than leave as byte arrays to make code easier to read and indentify where methods are being reused but in doint do lose their funcationl clarity.